refactor: replace `get(0)` with `getFirst()` in test assertions and method calls for improved readability and consistency